--- a/.github/workflows/autoupdate_terraform.yml
+++ b/.github/workflows/autoupdate_terraform.yml
@@ -11,7 +11,7 @@ jobs:
     job1:
       name: "auto-update"
       runs-on: ubuntu-latest
-      if: ${{ startsWith(github.ref, 'refs/heads/dependabot/') }}
+      if: ${{ startsWith(github.ref, 'refs/heads/dependabot/')|startsWith(github.ref, 'refs/heads/renovate/') }}
       steps:
         - uses: actions/checkout@v4
         - name: Build Module
