--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Choco install
         uses: crazy-max/ghaction-chocolatey@v3.0.0
         with:
-          args: install -source . -force terraform
+          args: install -source . -force terraform-latest
 
       - name: Terraform Version
         run: terraform -version
