--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish
 on:
   push:
     branches:
-      - develop
+      - main
     paths-ignore:
       - .github/**
   workflow_dispatch:
@@ -23,7 +23,7 @@ jobs:
       - name: Choco install
         uses: crazy-max/ghaction-chocolatey@v3.0.0
         with:
-          args: install -source . -force terraform
+          args: install -source . -force terraform-latest
 
       - name: Terraform Version
         run: terraform -version
@@ -31,7 +31,7 @@ jobs:
       - name: Save Choco package
         uses: actions/upload-artifact@v3
         with:
-          name: terraform
+          name: terraform-latest
           path: "${{ github.workspace }}/*.nupkg"
 
   publish-terraform:
@@ -45,13 +45,13 @@ jobs:
       - name: Restore Choco package
         uses: actions/download-artifact@v3
         with:
-          name: terraform
+          name: terraform-latest
           path: ${{ github.workspace }}
 
       - name: Choco install
         uses: crazy-max/ghaction-chocolatey@v3.0.0
         with:
-          args: install -source . -force terraform
+          args: install -source . -force terraform-latest
 
       - name: Terraform Version
         run: terraform -version
