--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -167,7 +167,7 @@ jobs:
             [2]: https://github.com/oxsecurity/megalinter
           branch: fix/megalinter-automatic-fixes # The pull request branch name.
           #branch-suffix: random #The branch suffix type when using the alternative branching strategy. Valid values are random, timestamp and short-commit-hash. See Alternative strategy for details.
-          committer: CAG-megalinter-bot <megalinter@ca-grp.com>
+          committer: ${{ secrets.MEGALINTER_NAME }} <${{ secrets.MEGALINTER_EMAIL }}>
           commit-message: "[MegaLinter] Apply linters automatic fixes"
           delete-branch: true # Delete the branch when closing pull requests, and when undeleted after merging.
           labels: bot # A comma or newline-separated list of labels.
@@ -191,8 +191,8 @@ jobs:
         with:
           branch: ${{ github.event.pull_request.head.ref || github.head_ref || github.ref }}
           commit_message: "[MegaLinter] Apply linters fixes"
-          commit_user_name: ${{ secrets.CLEANER_USER }}
-          commit_user_email: ${{ secrets.CLEANER_USER_EMAIL }}
+          commit_user_name: ${{ secrets.MEGALINTER_NAME }}
+          commit_user_email: ${{ secrets.MEGALINTER_EMAIL }}
 
   ###################################################################
   ###################################################################
@@ -273,7 +273,7 @@ jobs:
     name: "auto-merge"
     needs: [MegaLinter]
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' && (needs.MegaLinter.result == 'success' || needs.MegaLinter.result == 'failure')}}
+    if: ${{ (github.actor == 'dependabot[bot]' || github.actor == 'renovate[bot]') && github.event_name == 'pull_request' && (needs.MegaLinter.result == 'success' || needs.MegaLinter.result == 'failure')}}
     steps:
       - uses: actions/checkout@v4
       - uses: ahmadnassri/action-dependabot-auto-merge@v2
