--- a/.github/workflows/autoupdate_terraform.yml
+++ b/.github/workflows/autoupdate_terraform.yml
@@ -24,6 +24,13 @@ jobs:
           git config --local user.name "github-actions[bot]"
 
       - name: Commit changes to terraform.nuspec
+        if: ${{ startsWith(github.ref, 'refs/heads/dependabot/') }}
         run: |
           git add terraform.nuspec
           git commit -m "[dependabot skip] Update terraform.nuspec"
+
+      - name: Commit changes to terraform.nuspec
+        if: ${{ startsWith(github.ref, 'refs/heads/renovate/') }}
+        run: |
+          git add terraform.nuspec
+          git commit -m "[renovate skip] Update terraform.nuspec"
