--- a/.github/workflows/scheduled_maintenance.yml
+++ b/.github/workflows/scheduled_maintenance.yml
@@ -17,8 +17,8 @@ env:
   # To use hub command in Github Action: https://github.com/github/hub#github-actions
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   # If you use personal token, replace email/user accordingly
-  USER_EMAIL: CAG-tfupdate@ca-grp.com
-  USER_NAME: CAG-tfupdate
+  USER_EMAIL: ${{ secrets.PR_USER_EMAIL }}
+  USER_NAME: ${{ secrets.PR_USERNAME }}
   # Apply linter fixes configuration
   APPLY_FIXES: all # When active, APPLY_FIXES must also be defined as environment variable (in github/workflows/mega-linter.yml or other CI tool)
   APPLY_FIXES_EVENT: all # Decide which event triggers application of fixes in a commit or a PR (pull_request, push, all)
