--- a/.packages/terraform.nuspec
+++ b/.packages/terraform.nuspec
@@ -7,7 +7,7 @@
     <title>Terraform</title>
     <version>1.6.5</version>
     <authors>Mitchell Hashimoto, HashiCorp</authors>
-    <owners>RolfMoleman</owners>
+    <owners>RolfMoleman3391</owners>
     <summary>Terraform is a tool for building, changing, and versioning infrastructure safely and efficiently. Terraform can manage existing and popular service providers as well as custom in-house solutions.</summary>
     <description>
 Terraform is a tool for building, changing, and versioning infrastructure safely and efficiently. Terraform can manage existing and popular service providers as well as custom in-house solutions.
@@ -41,9 +41,9 @@ For more information on previous releases, check out the changelog on [GitHub](h
     <licenseUrl>https://github.com/hashicorp/terraform/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <!-- Important note about https://cdn.rawgit.com: Files are cached permanently after the first request. Use commit URLs when updating the icon. -->
-    <iconUrl>https://raw.githubusercontent.com/jamestoyer/chocolatey-packages/58ab86c08224c2ba79af2080346c53c1cc440afc/terraform/icons/terraform.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/RolfMoleman/Terraform-Latest/commit/c664bf669cc18dbc5f6d2df517a1ec3a7f0753c3/.assets/terraform.png</iconUrl>
   </metadata>
   <files>
-    <file src="tools\**" target="tools" />
+    <file src="..\.scripts\**" target=".scripts" />
   </files>
 </package>
