--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Choco pack
         uses: crazy-max/ghaction-chocolatey@v3.0.0
         with:
-          args: pack .\.packages\terraform.nuspec
+          args: pack .\.packages\terraform-latest.nuspec
 
       - name: Choco install
         uses: crazy-max/ghaction-chocolatey@v3.0.0
