--- a/.github/workflows/autoupdate_terraform.yml
+++ b/.github/workflows/autoupdate_terraform.yml
@@ -14,6 +14,9 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/heads/dependabot/') || startsWith(github.ref, 'refs/heads/renovate/') }}
     steps:
       - uses: actions/checkout@v4
+      - name: Install AU module
+        run: |
+          Install-Module -Name AU -Force -Confirm:$false
       - name: Build Module
         shell: pwsh
         run: ./.scripts/update_nuspec.ps1
