--- a/.github/workflows/autoupdate_terraform.yml
+++ b/.github/workflows/autoupdate_terraform.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install AU module
         run: |
-          pwsh -Command "Install-Module -Name AU -Force -Confirm:$false"
+          pwsh -Command "Install-Module -Name AU -Force -Confirm $false"
       - name: Build Module
         shell: pwsh
         run: ./.scripts/update_nuspec.ps1
