--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,39 +4,39 @@ repos:
     hooks:
       - id: check-added-large-files
         name: Check for newly added large files
-        log_file: ./pre-commit_logs/check-large.log
+        log_file: ./.pre-commit_logs/check-large.log
 
       - id: check-case-conflict
         name: Check for unnecessary text case changes
-        log_file: ./pre-commit_logs/check-case-conflict.log
+        log_file: ./.pre-commit_logs/check-case-conflict.log
 
       - id: check-merge-conflict
         name: check for git merge conflicts
-        log_file: ./pre-commit_logs/check-merge-conflict.log
+        log_file: ./.pre-commit_logs/check-merge-conflict.log
 
       - id: check-json
         name: check JSON validity
         exclude: (config/.cspell.json|build/arm_templates/blank_arm_template.json)
-        log_file: ./pre-commit_logs/check-json.log
+        log_file: ./.pre-commit_logs/check-json.log
 
       - id: check-yaml
         name: check YAML and YML validity
-        log_file: ./pre-commit_logs/check-yml.log
+        log_file: ./.pre-commit_logs/check-yml.log
 
       - id: detect-private-key
         name: check for unencrypted secrets
-        log_file: ./pre-commit_logs/private-key.log
+        log_file: ./.pre-commit_logs/private-key.log
 
       - id: end-of-file-fixer
         name: ensure all file ends are consistent
-        log_file: ./pre-commit_logs/file-end.log
+        log_file: ./.pre-commit_logs/file-end.log
 
       #- id: mixed-line-ending
-      #  log_file: ./pre-commit_logs/line-end.log
+      #  log_file: ./.pre-commit_logs/line-end.log
 
       - id: trailing-whitespace
         name: remove trailing whitespace
-        log_file: ./pre-commit_logs/trail whitespace.log
+        log_file: ./.pre-commit_logs/trail whitespace.log
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
     rev: v8.1.1
@@ -54,7 +54,7 @@ repos:
         name: run Prettier by Prettier
         files: \.(js|ts|jsx|tsx|css|less|html|json|markdown|md|yaml|yml)$ # include the listed extensions
         #exclude:  # files are excluded using the prettierignore files
-        log_file: ./pre-commit_logs/prettier.log
+        log_file: ./.pre-commit_logs/prettier.log
 
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: v1.84.0 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
@@ -70,8 +70,7 @@ repos:
         #exclude: \.terraform\/.*$
         exclude: ""
         verbose: true
-        log_file: ./pre-commit_logs/tffmt.log
-
+        log_file: ./.pre-commit_logs/tffmt.log
 
       ##############################################################
       #######        Terraform version updates               #######
@@ -86,8 +85,7 @@ repos:
         #files: ^/build/.+(\.tf)$
         files: ^(.*[\\\/])?[^\\\/]*\.(tf)$
         verbose: true
-        log_file: ./pre-commit_logs/tfupdate_terraform.log
-      
+        log_file: ./.pre-commit_logs/tfupdate_terraform.log
 
   ##############################################################
   #######       Generate Terraform Documentation         #######
@@ -97,16 +95,17 @@ repos:
     rev: v0.16.0 # Git tag specifying the hook
     hooks:
       - id: terraform-docs-go
-        name: Put terraform-docs into main readme.md
-        args:
-          [
-            markdown,
-            '.\build\terraform\',
-            --config,
-            '.\.config\.readme-terraform-docs.yml',
-          ]
+        name: Put terraform-docs into README.MD
+        args: [markdown, ".", --config, '.\.config\.readme-terraform-docs.yml']
         verbose: false
-        log_file: ./pre-commit_logs/terraform-docs_terraform_root.log
+        log_file: ./.pre-commit_logs/terraform-docs_redme_root.log
+
+      - id: terraform-docs-go
+        name: Put terraform-docs into TERRAFORM.MD
+        args:
+          [markdown, ".", --config, '.\.config\.terraform-terraform-docs.yml']
+        verbose: false
+        log_file: ./.pre-commit_logs/terraform-docs_terraform_root.log
 
   ###############################################################
   #######  Full repo multi-language security and linting  #######
@@ -163,7 +162,7 @@ repos:
         stages:
           - commit
         verbose: true # Always show costs
-        log_file: ./pre-commit_logs/megalinter_local_root.log
+        log_file: ./.pre-commit_logs/megalinter_local_root.log
 
   ###############################################################
   #######         Commit verification and signing         #######
